--- a/Main/SEToolbox/SEToolbox/Properties/Resources.resx
+++ b/Main/SEToolbox/SEToolbox/Properties/Resources.resx
@@ -2939,4 +2939,28 @@ Reason: {1}</value>
     <value>Small</value>
     <comment>enum Cube grid size</comment>
   </data>
+  <data name="CtlPlanetMnuRegenerate" xml:space="preserve">
+    <value>Regenerate</value>
+  </data>
+  <data name="CtlPlanetMnuRegenerateDetail" xml:space="preserve">
+    <value>Will remove any voxel changes to the asteroid. Allows changing random seed, and changing size.</value>
+  </data>
+  <data name="earth" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\earth.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="WnRegeneratePlanetBtnCancel" xml:space="preserve">
+    <value>Cancel</value>
+  </data>
+  <data name="WnRegeneratePlanetBtnOkay" xml:space="preserve">
+    <value>OK</value>
+  </data>
+  <data name="WnRegeneratePlanetLabelSeed" xml:space="preserve">
+    <value>Seed</value>
+  </data>
+  <data name="WnRegeneratePlanetLabelSize" xml:space="preserve">
+    <value>Meters Size (Diameter)</value>
+  </data>
+  <data name="WnRegeneratePlanetTitle" xml:space="preserve">
+    <value>Regenerate Planet</value>
+  </data>
 </root>
