Added control to copy planet GPS center. Added control to turn on/off built in planet center gps.

--- a/Main/SEToolbox/SEToolbox/Properties/Resources.resx
+++ b/Main/SEToolbox/SEToolbox/Properties/Resources.resx
@@ -2963,4 +2963,7 @@ Reason: {1}</value>
   <data name="WnRegeneratePlanetTitle" xml:space="preserve">
     <value>Regenerate Planet</value>
   </data>
+  <data name="CtlPlanetMnuCopyGpsCenter" xml:space="preserve">
+    <value>Copy GPS</value>
+  </data>
 </root>
