--- a/Main/SEToolbox/SEToolbox/Properties/Resources.resx
+++ b/Main/SEToolbox/SEToolbox/Properties/Resources.resx
@@ -284,20 +284,21 @@ Size:	{9} m × {10} m × {11} m
 Mass:	{12:#,##0.00} kg
 Blocks:	{13:#,##0}
 Position:	{14}, {15}, {16}
-Total time to produce:	{17:dd} days, {17:hh} hours, {17:mm\:ss\.ff}
+PCU:	{17:#,##0}
+Total time to produce:	{18:dd} days, {18:hh} hours, {18:mm\:ss\.ff}
 
 Construction Requirements:
-Cubes	Count	Mass	Time to Produce
-{18}
-
-Components	Count	Mass	Volume	Time to Produce
+Cubes	Count	Mass	Time to Produce	PCU
 {19}
 
-Ingots	Amount	Mass	Volume	Time to Produce
+Components	Count	Mass	Volume	Time to Produce
 {20}
 
+Ingots	Amount	Mass	Volume	Time to Produce
+{21}
+
 Ore	Amount	Mass	Volume
-{21}</value>
+{22}</value>
   </data>
   <data name="document_view" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\document_view.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -2965,5 +2966,17 @@ Reason: {1}</value>
   </data>
   <data name="CtlPlanetMnuCopyGpsCenter" xml:space="preserve">
     <value>Copy GPS</value>
+  </data>
+  <data name="WnComponentsColCubePCU" xml:space="preserve">
+    <value>PCU</value>
+  </data>
+  <data name="CtlCubeColCubePCU" xml:space="preserve">
+    <value>PCU</value>
+  </data>
+  <data name="CtlCubeColPCU" xml:space="preserve">
+    <value>PCU</value>
+  </data>
+  <data name="CtlCubeTxtPCUToProd" xml:space="preserve">
+    <value>PCU to produce:</value>
   </data>
 </root>
