#20 Updated checker enhancements. Replaced Web call with GitHub API for update changes. Added better feedback for manual update check based on version. Added InstallLanguage registry for installation to help in determining existing install package for possible auto updates. Removed old Codexplex bits.

--- a/Main/SEToolbox/SEToolbox/Properties/Resources.resx
+++ b/Main/SEToolbox/SEToolbox/Properties/Resources.resx
@@ -3070,4 +3070,13 @@ Reason: {1}</value>
   <data name="ClsCockpitOrientationNone" xml:space="preserve">
     <value>None</value>
   </data>
+  <data name="DialogLatestVersionMessage" xml:space="preserve">
+    <value>You have the latest version of SEToolbox.</value>
+  </data>
+  <data name="DialogNoNewVersionTitle" xml:space="preserve">
+    <value>SEToolbox is up to date</value>
+  </data>
+  <data name="DialogPrereleaseVersionMessage" xml:space="preserve">
+    <value>You are running a prerelease version of SEToolbox.</value>
+  </data>
 </root>
