Rewrite asteroid model voxelization to significantly improve speed and quality

--- a/Dev/SEToolbox/SEToolbox/Properties/Resources.resx
+++ b/Dev/SEToolbox/SEToolbox/Properties/Resources.resx
@@ -1769,7 +1769,7 @@ Planet Generator:	{17}</value>
     <value>Bounding Size:</value>
   </data>
   <data name="CtlVoxelBoundingSizeValue" xml:space="preserve">
-    <value>{0} × {1} × {2} blocks</value>
+    <value>{0} × {1} × {2} voxels</value>
   </data>
   <data name="CtlVoxelCenter" xml:space="preserve">
     <value>Volume center:</value>
